# comfyui-learningcenter

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
resources/: README.md
server/: README_achievements.md  __init__.py  achievement_certificate.py  learningcenter.py  remote_image.py
templates/3d/: metadata.json
templates/3d/crm_3d/: metadata.json
templates/3d/sketch_3d/: metadata.json
templates/awesome/: metadata.json
templates/awesome/ai-dialogue-game/: metadata.json
templates/awesome/cute-you/: exercise.json  metadata.json
templates/awesome/easy-2d-to-3d/: metadata.json
templates/awesome/easy-logo-animation/: metadata.json
templates/awesome/extended-image/: metadata.json
templates/awesome/face-off/: metadata.json
templates/chapter1_intro/: answer.json  exercise.json  metadata.json
templates/chapter2_basics/: answer.json  exercise.json  metadata.json
templates/chapter3_text/: answer.json  exercise.json  metadata.json
templates/chapter4_controlnet/: answer.json  exercise.json  metadata.json
templates/chapter5_inpainting/: answer.json  exercise.json  metadata.json
templates/chapter6_congratulations/: exercise.json  metadata.json
templates/flux/: metadata.json
templates/hunyuan/: metadata.json
templates/liveportrait/: metadata.json
templates/sd3/: metadata.json
templates/sdxs/: metadata.json
templates/special/: metadata.json
templates/stable_cascade/: metadata.json
user_progress/: hidden_achievements.json  progress.json
web/: learningcenter-ui.js  learningcenter.js  templates.js  utils.js
(+17 files in other folders)
