[project]
name = "comfyui-learningcenter"
description = "ComfyUI学习中心插件，提供交互式学习体验，帮助用户从零开始学习ComfyUI。"
version = "1.0.0"
license = { file = "LICENSE" }

dependencies = [
    "pillow>=9.2.0",
    "aiohttp>=3.8.3",
    "numpy>=1.20.0",
    "opencv-python>=4.5.0"
]

[project.urls]
Repository = "https://github.com/assemly/comfyui-learningcenter.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "assemly"
DisplayName = "Learning Center"
Icon = ""
